--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ lazy_static = "1.5.0"
 bitflags = "2.9.1"
 anyhow = "1.0.98"
 thiserror = "2.0.12"
+strum = "0.27.1"
+strum_macros = "0.27.1"
+log = "0.4.27"
