Add pyo3 library attributes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "nesrs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "nesrs"
+crate-type = ["cdylib"]
+
 [dependencies]
 lazy_static = "1.5.0"
 bitflags = "2.9.1"
@@ -12,5 +16,4 @@ strum = "0.27.1"
 strum_macros = "0.27.1"
 log = "0.4.27"
 sdl2 = "0.38.0"
-zmq = "0.10.0"
-memmap2 = "0.9.7"
+pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
