--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nesrs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [lib]
@@ -15,8 +15,8 @@ thiserror = "2.0.12"
 strum = "0.27.1"
 strum_macros = "0.27.1"
 log = "0.4.27"
-sdl2 = "0.38.0"
-pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
+sdl2 = { version = "0.38.0", default-features = false, features = ["static-link", "bundled"] }
+pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde-big-array = "0.5.1"
 postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
